treasury module, WIP change defaults in res_company and res_config models fields and add other_incomes_account field to them

--- a/views/res_company_views.xml
+++ b/views/res_company_views.xml
@@ -16,6 +16,7 @@
                         <group>
                             <field name="incoming_securities_account_id"/>
                             <field name="incoming_securities_in_bank_account_id"/>
+                            <field name="other_incomes_account"/>
                         </group>
                     </group>
                 </page>
