--- a/views/res_config_settings_views.xml
+++ b/views/res_config_settings_views.xml
@@ -50,6 +50,13 @@
                                         <field name="incoming_securities_in_bank_account_id"
                                                style="padding-right:16px;"/>
                                     </div>
+                                    <div class="row mt16">
+                                        <label string="other incomes account"
+                                               for="other_incomes_account"
+                                               class="col-lg-12 o_light_label"/>
+                                        <field name="other_incomes_account"
+                                               style="padding-right:16px;"/>
+                                    </div>
                                 </div>
 
                             </div>
