--- a/views/treasury_incoming_views.xml
+++ b/views/treasury_incoming_views.xml
@@ -15,7 +15,7 @@
                             attrs="{'invisible':['|', ('state','not in',['undeposited','bounced','sued']),'&amp;', ('guaranty','=',True),('expected_return_by','&lt;=','current_date')]}"
                             confirm="Considering expected_return_by, Are you sure you want to send it to bank?"/>
                     <button name="action_bounce" string="bounce" type="object" class="btn-primary"
-                            attrs="{'invisible':[('state','!=','in bank')]}"/>
+                            attrs="{'invisible':['&amp;',('state','!=','undeposited'), ('due_date','&lt;=','current_date')]}"/>
                     <button name="action_sue" string="sue" type="object" class="btn-primary"
                             attrs="{'invisible':[('state','!=','bounced')]}"/>
                     <button name="action_return" string="return" type="object" class="btn-primary"
