--- a/views/treasury_checkbook_views.xml
+++ b/views/treasury_checkbook_views.xml
@@ -57,24 +57,24 @@
         <field name="arch" type="xml">
             <search>
                 <field name="journal_id"/>
-                <field name="bank_account_id"/>
-                <field name="check_ids" filter_domain="[('first_serial_no','&lt;=',self),('last_serial_no','&gt;=', self)]"/>
+                <field name="bank_account_id" filter_domain="[('bank_account_id.acc_number','ilike',self)]"/>
+                <field name="check_ids" string="checks serial numbers" filter_domain="[('first_serial_no','&lt;=',self),('last_serial_no','&gt;=', self)]"/>
                 <filter string="To Renew" name="Renew" domain="[('renew', '=', True)]"/>
             </search>
         </field>
     </record>
 
     <record id="treasury_checkbook_pivot" model="ir.ui.view">
-            <field name="name">>treasury.checkbook.pivot</field>
-            <field name="model">treasury.checkbook</field>
-            <field name="arch" type="xml">
-                <pivot string="Checkbook State">
-                    <field name="journal_id" type="row"/>
-                    <field name="state" type="col"/>
-                    <field name="count" type="measure"/>
-                </pivot>
-            </field>
-        </record>
+        <field name="name">>treasury.checkbook.pivot</field>
+        <field name="model">treasury.checkbook</field>
+        <field name="arch" type="xml">
+            <pivot string="Checkbook State">
+                <field name="journal_id" type="row"/>
+                <field name="state" type="col"/>
+                <field name="count" type="measure"/>
+            </pivot>
+        </field>
+    </record>
 
     <record id="treasury_checkbook_action_view_tree" model="ir.actions.act_window">
         <field name="name">Treasury Checkbook</field>
