--- a/views/treasury_checkbook_views.xml
+++ b/views/treasury_checkbook_views.xml
@@ -41,7 +41,7 @@
                         </group>
                         <field name="check_ids" readonly="1"/>
                         <group>
-                            <button name="cancel_all" string="cancel all" type="object"
+                            <button name="action_cancel_all" string="cancel all" type="object"
                                     confirm="Are you sure you want to do this?" class="btn-primary"
                                     attrs="{'invisible':[('check_ids','=',[])]}"/>
                         </group>
