--- a/views/treasury_outgoing_views.xml
+++ b/views/treasury_outgoing_views.xml
@@ -5,13 +5,13 @@
         <field name="name">treasury.outgoing.view.tree</field>
         <field name="model">treasury.outgoing</field>
         <field name="arch" type="xml">
-            <tree decoration-success="state=='new' or state=='draft'" decoration-info="state=='printed'"
+            <tree decoration-success="state=='new' or state=='draft'" decoration-info="state=='issued'"
                   decoration-bf="state=='delivered'"
                   decoration-muted="state=='canceled' or state=='cashed'">
                 <field name="name"/>
                 <field name="due_date"/>
                 <field name="amount"/>
-                <field name="beneficiary"/>
+                <field name="beneficiary_id"/>
                 <field name="reason"/>
                 <field name="state"/>
             </tree>
@@ -24,10 +24,12 @@
         <field name="arch" type="xml">
             <form>
                 <header>
-                    <button name="action_print" string="print" type="object" class="btn-primary" attrs="{'invisible':['|', ('type','!=','check'), ('state','not in',['new','draft'])]}"/>
-                    <button name="action_issue" string="issue" type="object" class="btn-primary" attrs="{'invisible':['|', ('type','=','check'), ('state','not in',['new','draft'])]}"/>
+                    <button name="action_print" string="print" type="object" class="btn-primary"
+                            attrs="{'invisible':['|', ('type','!=','check'), ('state','not in',['new','draft'])]}"/>
+                    <button name="action_issue" string="issue" type="object" class="btn-primary"
+                            attrs="{'invisible':['|', ('type','=','check'), ('state','not in',['new','draft'])]}"/>
                     <button name="action_deliver" string="deliver" type="object" class="btn-primary"
-                            attrs="{'invisible':[('state','!=','printed')]}"/>
+                            attrs="{'invisible':[('state','!=','issued')]}"/>
                     <button name="action_cancel" string="cancel" type="object" class="btn-primary"
                             attrs="{'invisible':[('state','=',['delivered', 'cashed'])]}"/>
                     <button name="action_return" string="return" type="object" class="btn-primary"
@@ -38,7 +40,8 @@
                     <group>
                         <group>
                             <field name="name"/>
-                            <field name="number" attrs="{'readonly':['|',('state','not in',['new', 'draft']), ('type','=','check')]}"/>
+                            <field name="number"
+                                   attrs="{'readonly':['|',('state','not in',['new', 'draft']), ('type','=','check')]}"/>
                             <field name="type" invisible="1"/>
                             <field name="select_type"
                                    attrs="{'readonly':[('state','not in',['new', 'draft'])], 'invisible':[('type','==','check')], 'required':[('type','!=','check')]}"/>
@@ -62,7 +65,7 @@
                                    required="1"/>
                             <field name="currency_id" attrs="{'readonly':[('state','not in',['new', 'draft'])]}"
                                    required="1"/>
-                            <field name="beneficiary" attrs="{'readonly':[('state','not in',['new', 'draft'])]}"
+                            <field name="beneficiary_id" attrs="{'readonly':[('state','not in',['new', 'draft'])]}"
                                    required="1"/>
                             <field name="reason" attrs="{'readonly':[('state','not in',['new', 'draft'])]}"
                                    required="1"/>
@@ -75,6 +78,62 @@
                     <field name="message_ids" widget="mail_thread"/>
                 </div>
             </form>
+        </field>
+    </record>
+
+    <record id="treasury_outgoing_search" model="ir.ui.view">
+        <field name="name">treasury.outgoing.search</field>
+        <field name="model">treasury.outgoing</field>
+        <field name="arch" type="xml">
+            <search>
+                <field name="display_name"
+                       filter_domain="['|','|',('name','ilike',self),('number','ilike',self),('reason','ilike',self)]"/>
+                <field name="beneficiary_id"/>
+                <field name="state"/>
+                <filter string="New" name="filter_by_new" domain="[('state', '=', 'new')]"/>
+                <filter string="Draft" name="filter_by_draft" domain="[('state', '=', 'draft')]"/>
+                <filter string="Issued" name="filter_by_issued" domain="[('state', '=', 'issued')]"/>
+                <filter string="Delivered" name="filter_by_delivered" domain="[('state', '=', 'delivered')]"/>
+                <filter string="Cashed" name="filter_by_cashed" domain="[('state', '=', 'cashed')]"/>
+                <filter string="Bounced" name="filter_by_bounced" domain="[('state', '=', 'bounced')]"/>
+                <filter string="Canceled" name="filter_by_canceled" domain="[('state', '=', 'canceled')]"/>
+                <separator/>
+                <filter string="Check" name="filter_by_check" domain="[('type', '=', 'check')]"/>
+                <filter string="Promissory note" name="filter_by_promissory_note"
+                        domain="[('type', '=', 'promissory_note')]"/>
+                <filter string="Bond" name="filter_by_bond" domain="[('type', '=', 'bond')]"/>
+                <filter string="LC" name="filter_by_lc" domain="[('type', '=', 'lc')]"/>
+                <filter string="Bank guaranty" name="filter_by_bank_guaranty"
+                        domain="[('type', '=', 'bank_guaranty')]"/>
+                <separator/>
+                <filter string="Guaranty" name="filter_by_guaranty" domain="[('guaranty', '=', True)]"/>
+                <filter string="Over Due" name="filter_by_over_due"
+                        domain="[('guaranty', '=', False),('state','!=','bounced'),('due_date','&gt;',context_today().strftime('%Y-%m-%d'))]"/>
+                <filter string="Due" name="filter_by_due"
+                        domain="[('guaranty', '=', False),('due_date','=',context_today().strftime('%Y-%m-%d'))]"/>
+                <filter string="To Release" name="filter_by_release"
+                        domain="[('guaranty', '=', True),('expected_return_by','&gt;=',context_today().strftime('%Y-%m-%d'))]"/>
+                <filter string="Upcoming" name="filter_by_upcoming"
+                        domain="[('due_date','&lt;=',(context_today()+datetime.timedelta(days=7)).strftime('%Y-%m-%d')),('state','=','delivered')]"/>
+
+                <group expand="0" string="Group By">
+                    <filter string="State" name="group_by_state" domain="[]" context="{'group_by':'state'}"/>
+                    <filter string="Type" name="group_by_type" domain="[]" context="{'group_by':'type'}"/>
+                    <filter string="Security type" name="group_by_security_type" domain="[]"
+                            context="{'group_by':'security_type_id'}"/>
+                </group>
+
+            </search>
+        </field>
+    </record>
+
+    <record id="treasury_outgoing_pivot" model="ir.ui.view">
+        <field name="name">>treasury.outgoing.pivot</field>
+        <field name="model">treasury.outgoing</field>
+        <field name="arch" type="xml">
+            <pivot string="Outgoing State">
+
+            </pivot>
         </field>
     </record>
 
