--- a/views/treasury_outgoing_views.xml
+++ b/views/treasury_outgoing_views.xml
@@ -47,6 +47,7 @@
                                    attrs="{'readonly':[('state','not in',['new', 'draft'])], 'invisible':[('type','==','check')], 'required':[('type','!=','check')]}"/>
                             <field name="due_date" attrs="{'readonly':[('state','not in',['new', 'draft'])]}"
                                    required="1"/>
+                            <field name="due_state"/>
                             <field name="guaranty"
                                    attrs="{'readonly':[('type','in',['promissory_note', 'bank_guaranty'])]}"
                                    required="1"/>
@@ -55,7 +56,6 @@
                             <field name="checkbook_id" attrs="{'invisible':[('type','!=','check')]}"/>
                             <field name="company_id" groups="base.group_multi_company"
                                    attrs="{'readonly':[('state','not in',['new', 'draft'])]}" required="1"/>
-
                         </group>
                         <group>
                             <field name="security_type_id"
@@ -133,7 +133,7 @@
         <field name="arch" type="xml">
             <pivot string="Outgoing State Pivot">
                 <field name="due_date" interval="week" type="row"/>
-                    <field name="amount" type="measure"/>
+                <field name="amount" type="measure"/>
             </pivot>
         </field>
     </record>
@@ -144,7 +144,7 @@
         <field name="arch" type="xml">
             <pivot string="Outgoing State Graph">
                 <field name="due_date" interval="week" type="row"/>
-                    <field name="amount" type="measure"/>
+                <field name="amount" type="measure"/>
             </pivot>
         </field>
     </record>
