--- a/views/treasury_checkbook_views.xml
+++ b/views/treasury_checkbook_views.xml
@@ -41,7 +41,7 @@
                         </group>
                         <field name="check_ids" readonly="1"/>
                         <group>
-                            <button name="cancel_all" string="cancel all" type="object"
+                            <button name="action_cancel_all" string="cancel all" type="object"
                                     confirm="Are you sure you want to do this?" class="btn-primary"
                                     attrs="{'invisible':[('check_ids','=',[])]}"/>
                         </group>
@@ -51,10 +51,35 @@
         </field>
     </record>
 
+    <record id="treasury_checkbook_search" model="ir.ui.view">
+        <field name="name">treasury.checkbook.search</field>
+        <field name="model">treasury.checkbook</field>
+        <field name="arch" type="xml">
+            <search>
+                <field name="journal_id"/>
+                <field name="bank_account_id" filter_domain="[('bank_account_id.acc_number','ilike',self)]"/>
+                <field name="check_ids" string="checks serial numbers" filter_domain="[('first_serial_no','&lt;=',self),('last_serial_no','&gt;=', self)]"/>
+                <filter string="To Renew" name="Renew" domain="[('renew', '=', True)]"/>
+            </search>
+        </field>
+    </record>
+
+    <record id="treasury_checkbook_pivot" model="ir.ui.view">
+        <field name="name">>treasury.checkbook.pivot</field>
+        <field name="model">treasury.checkbook</field>
+        <field name="arch" type="xml">
+            <pivot string="Checkbook State">
+                <field name="journal_id" type="row"/>
+                <field name="state" type="col"/>
+                <field name="count" type="measure"/>
+            </pivot>
+        </field>
+    </record>
+
     <record id="treasury_checkbook_action_view_tree" model="ir.actions.act_window">
         <field name="name">Treasury Checkbook</field>
         <field name="res_model">treasury.checkbook</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">tree,form,pivot</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
                 Create your first checkbook!
