--- a/views/treasury_outgoing_views.xml
+++ b/views/treasury_outgoing_views.xml
@@ -5,13 +5,13 @@
         <field name="name">treasury.outgoing.view.tree</field>
         <field name="model">treasury.outgoing</field>
         <field name="arch" type="xml">
-            <tree decoration-success="state=='new' or state=='draft'" decoration-info="state=='printed'"
+            <tree decoration-success="state=='new' or state=='draft'" decoration-info="state=='issued'"
                   decoration-bf="state=='delivered'"
                   decoration-muted="state=='canceled' or state=='cashed'">
                 <field name="name"/>
                 <field name="due_date"/>
                 <field name="amount"/>
-                <field name="beneficiary"/>
+                <field name="beneficiary_id"/>
                 <field name="reason"/>
                 <field name="state"/>
             </tree>
@@ -24,10 +24,12 @@
         <field name="arch" type="xml">
             <form>
                 <header>
-                    <button name="action_print" string="print" type="object" class="btn-primary" attrs="{'invisible':['|', ('type','!=','check'), ('state','not in',['new','draft'])]}"/>
-                    <button name="action_issue" string="issue" type="object" class="btn-primary" attrs="{'invisible':['|', ('type','=','check'), ('state','not in',['new','draft'])]}"/>
+                    <button name="action_print" string="print" type="object" class="btn-primary"
+                            attrs="{'invisible':['|', ('type','!=','check'), ('state','not in',['new','draft'])]}"/>
+                    <button name="action_issue" string="issue" type="object" class="btn-primary"
+                            attrs="{'invisible':['|', ('type','=','check'), ('state','not in',['new','draft'])]}"/>
                     <button name="action_deliver" string="deliver" type="object" class="btn-primary"
-                            attrs="{'invisible':[('state','!=','printed')]}"/>
+                            attrs="{'invisible':[('state','!=','issued')]}"/>
                     <button name="action_cancel" string="cancel" type="object" class="btn-primary"
                             attrs="{'invisible':[('state','=',['delivered', 'cashed'])]}"/>
                     <button name="action_return" string="return" type="object" class="btn-primary"
@@ -38,12 +40,14 @@
                     <group>
                         <group>
                             <field name="name"/>
-                            <field name="number" attrs="{'readonly':['|',('state','not in',['new', 'draft']), ('type','=','check')]}"/>
+                            <field name="number"
+                                   attrs="{'readonly':['|',('state','not in',['new', 'draft']), ('type','=','check')]}"/>
                             <field name="type" invisible="1"/>
                             <field name="select_type"
                                    attrs="{'readonly':[('state','not in',['new', 'draft'])], 'invisible':[('type','==','check')], 'required':[('type','!=','check')]}"/>
                             <field name="due_date" attrs="{'readonly':[('state','not in',['new', 'draft'])]}"
                                    required="1"/>
+                            <field name="due_state"/>
                             <field name="guaranty"
                                    attrs="{'readonly':[('type','in',['promissory_note', 'bank_guaranty'])]}"
                                    required="1"/>
@@ -52,7 +56,6 @@
                             <field name="checkbook_id" attrs="{'invisible':[('type','!=','check')]}"/>
                             <field name="company_id" groups="base.group_multi_company"
                                    attrs="{'readonly':[('state','not in',['new', 'draft'])]}" required="1"/>
-
                         </group>
                         <group>
                             <field name="security_type_id"
@@ -62,7 +65,7 @@
                                    required="1"/>
                             <field name="currency_id" attrs="{'readonly':[('state','not in',['new', 'draft'])]}"
                                    required="1"/>
-                            <field name="beneficiary" attrs="{'readonly':[('state','not in',['new', 'draft'])]}"
+                            <field name="beneficiary_id" attrs="{'readonly':[('state','not in',['new', 'draft'])]}"
                                    required="1"/>
                             <field name="reason" attrs="{'readonly':[('state','not in',['new', 'draft'])]}"
                                    required="1"/>
@@ -78,10 +81,78 @@
         </field>
     </record>
 
+    <record id="treasury_outgoing_search" model="ir.ui.view">
+        <field name="name">treasury.outgoing.search</field>
+        <field name="model">treasury.outgoing</field>
+        <field name="arch" type="xml">
+            <search>
+                <field name="display_name"
+                       filter_domain="['|','|',('name','ilike',self),('number','ilike',self),('reason','ilike',self)]"/>
+                <field name="beneficiary_id"/>
+                <field name="state"/>
+                <filter string="New" name="new" domain="[('state', '=', 'new')]"/>
+                <filter string="Draft" name="draft" domain="[('state', '=', 'draft')]"/>
+                <filter string="Issued" name="issued" domain="[('state', '=', 'issued')]"/>
+                <filter string="Delivered" name="delivered" domain="[('state', '=', 'delivered')]"/>
+                <filter string="Cashed" name="cashed" domain="[('state', '=', 'cashed')]"/>
+                <filter string="Bounced" name="bounced" domain="[('state', '=', 'bounced')]"/>
+                <filter string="Canceled" name="canceled" domain="[('state', '=', 'canceled')]"/>
+                <separator/>
+                <filter string="Check" name="check" domain="[('type', '=', 'check')]"/>
+                <filter string="Promissory note" name="promissory_note"
+                        domain="[('type', '=', 'promissory_note')]"/>
+                <filter string="Bond" name="bond" domain="[('type', '=', 'bond')]"/>
+                <filter string="LC" name="lc" domain="[('type', '=', 'lc')]"/>
+                <filter string="Bank guaranty" name="bank_guaranty"
+                        domain="[('type', '=', 'bank_guaranty')]"/>
+                <separator/>
+                <filter string="Guaranty" name="guaranty" domain="[('guaranty', '=', True)]"/>
+                <filter string="Over Due" name="over_due"
+                        domain="[('guaranty', '=', False),('state','!=','bounced'),('due_state','=','overdue')]"/>
+                <filter string="Due" name="due"
+                        domain="[('guaranty', '=', False),('due_state','=','due')]"/>
+                <filter string="To Release" name="release"
+                        domain="[('guaranty', '=', True),('expected_return_by','&gt;=',context_today().strftime('%Y-%m-%d'))]"/>
+                <filter string="Upcoming" name="upcoming"
+                        domain="[('due_date','&lt;=',(context_today()+datetime.timedelta(days=7)).strftime('%Y-%m-%d')),('state','=','delivered')]"/>
+
+                <group expand="0" string="Group By">
+                    <filter string="State" name="group_by_state" domain="[]" context="{'group_by':'state'}"/>
+                    <filter string="Type" name="group_by_type" domain="[]" context="{'group_by':'type'}"/>
+                    <filter string="Security type" name="group_by_security_type" domain="[]"
+                            context="{'group_by':'security_type_id'}"/>
+                </group>
+
+            </search>
+        </field>
+    </record>
+
+    <record id="treasury_outgoing_pivot" model="ir.ui.view">
+        <field name="name">>treasury.outgoing.pivot</field>
+        <field name="model">treasury.outgoing</field>
+        <field name="arch" type="xml">
+            <pivot string="Outgoing State Pivot">
+                <field name="due_date" interval="week" type="row"/>
+                <field name="amount" type="measure"/>
+            </pivot>
+        </field>
+    </record>
+
+    <record id="treasury_outgoing_graph" model="ir.ui.view">
+        <field name="name">>treasury.outgoing.graph</field>
+        <field name="model">treasury.outgoing</field>
+        <field name="arch" type="xml">
+            <pivot string="Outgoing State Graph">
+                <field name="due_date" interval="week" type="row"/>
+                <field name="amount" type="measure"/>
+            </pivot>
+        </field>
+    </record>
+
     <record id="treasury_outgoing_action_view_tree" model="ir.actions.act_window">
         <field name="name">Treasury Outgoing</field>
         <field name="res_model">treasury.outgoing</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">tree,form,pivot,graph</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
                 Create your first Outgoing!
