--- a/views/res_config_settings_views.xml
+++ b/views/res_config_settings_views.xml
@@ -4,6 +4,7 @@
         <field name="name">treasury.res.config.settings.view.form</field>
         <field name="model">res.config.settings</field>
         <field name="inherit_id" ref="base.res_config_settings_view_form"/>
+        <field name="priority" eval="500"/>
         <field name="arch" type="xml">
             <div data-key="account" position="inside">
                 <h2>Treasury</h2>
