--- a/views/res_config_settings_views.xml
+++ b/views/res_config_settings_views.xml
@@ -4,66 +4,64 @@
         <field name="name">treasury.res.config.settings.view.form</field>
         <field name="model">res.config.settings</field>
         <field name="inherit_id" ref="base.res_config_settings_view_form"/>
+        <field name="priority" eval="500"/>
         <field name="arch" type="xml">
-            <xpath expr="//div[hasclass('settings')]" position="inside">
-                <div class="app_settings_block" data-string="Invoicing" string="Invoicing" data-key="account"
-                     groups="account.group_account_manager">
-                    <h2>Treasury</h2>
-                    <div class="row mt16 o_settings_container">
-                        <div class="col-12 col-lg-6 o_setting_box">
-                            <div class="o_setting_left_pane"/>
-                            <div class="o_setting_right_pane">
-                                <div class="content-group">
-                                    <div class="row mt16">
-                                        <label string="treasury journal" for="treasury_journal_id"
-                                               class="col-lg-12 o_light_label"/>
-                                        <field name="treasury_journal_id" style="padding-right:16px;"/>
-                                    </div>
-                                    <div class="row mt16">
-                                        <label string="outgoing securities account" for="outgoing_securities_account_id"
-                                               class="col-lg-12 o_light_label"/>
-                                        <field name="outgoing_securities_account_id" style="padding-right:16px;"/>
-                                    </div>
-                                    <div class="row mt16">
-                                        <label string="sued incoming securities account"
-                                               for="sued_incoming_securities_account_id"
-                                               class="col-lg-12 o_light_label"/>
-                                        <field name="sued_incoming_securities_account_id" style="padding-right:16px;"/>
-                                    </div>
+            <div data-key="account" position="inside">
+                <h2>Treasury</h2>
+                <div class="row mt16 o_settings_container">
+                    <div class="col-12 col-lg-6 o_setting_box">
+                        <div class="o_setting_left_pane"/>
+                        <div class="o_setting_right_pane">
+                            <div class="content-group">
+                                <div class="row mt16">
+                                    <label string="treasury journal" for="treasury_journal_id"
+                                           class="col-lg-12 o_light_label"/>
+                                    <field name="treasury_journal_id" style="padding-right:16px;"/>
                                 </div>
-                            </div>
-                        </div>
-
-                        <div class="col-12 col-lg-6 o_setting_box" id="rounding_method">
-                            <div class="o_setting_left_pane"/>
-                            <div class="o_setting_right_pane">
-                                <div class="content-group">
-                                    <div class="row mt16">
-                                        <label string="incoming securities account" for="incoming_securities_account_id"
-                                               class="col-lg-12 o_light_label"/>
-                                        <field name="incoming_securities_account_id" style="padding-right:16px;"/>
-                                    </div>
-                                    <div class="row mt16">
-                                        <label string="incoming securities in bank account"
-                                               for="incoming_securities_in_bank_account_id"
-                                               class="col-lg-12 o_light_label"/>
-                                        <field name="incoming_securities_in_bank_account_id"
-                                               style="padding-right:16px;"/>
-                                    </div>
-                                    <div class="row mt16">
-                                        <label string="other incomes account"
-                                               for="other_incomes_account"
-                                               class="col-lg-12 o_light_label"/>
-                                        <field name="other_incomes_account"
-                                               style="padding-right:16px;"/>
-                                    </div>
+                                <div class="row mt16">
+                                    <label string="outgoing securities account" for="outgoing_securities_account_id"
+                                           class="col-lg-12 o_light_label"/>
+                                    <field name="outgoing_securities_account_id" style="padding-right:16px;"/>
                                 </div>
-
+                                <div class="row mt16">
+                                    <label string="sued incoming securities account"
+                                           for="sued_incoming_securities_account_id"
+                                           class="col-lg-12 o_light_label"/>
+                                    <field name="sued_incoming_securities_account_id" style="padding-right:16px;"/>
+                                </div>
                             </div>
                         </div>
                     </div>
+
+                    <div class="col-12 col-lg-6 o_setting_box" id="rounding_method">
+                        <div class="o_setting_left_pane"/>
+                        <div class="o_setting_right_pane">
+                            <div class="content-group">
+                                <div class="row mt16">
+                                    <label string="incoming securities account" for="incoming_securities_account_id"
+                                           class="col-lg-12 o_light_label"/>
+                                    <field name="incoming_securities_account_id" style="padding-right:16px;"/>
+                                </div>
+                                <div class="row mt16">
+                                    <label string="incoming securities in bank account"
+                                           for="incoming_securities_in_bank_account_id"
+                                           class="col-lg-12 o_light_label"/>
+                                    <field name="incoming_securities_in_bank_account_id"
+                                           style="padding-right:16px;"/>
+                                </div>
+                                <div class="row mt16">
+                                    <label string="other incomes account"
+                                           for="other_incomes_account"
+                                           class="col-lg-12 o_light_label"/>
+                                    <field name="other_incomes_account"
+                                           style="padding-right:16px;"/>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
                 </div>
-            </xpath>
+            </div>
         </field>
     </record>
 </odoo>
